--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="UTF-8" lang="en">
     <title>Rock, Paper, Scissors...In the Console!</title>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
   </head>
   <body style="text-align: center;">
     <h1>Play Rock, Paper, Scissors in the DevTools Console!</h1>
-    <h2>Case doesn't matter, and the game ends after 5 rounds!</h2>
+    <h2>Click a button to make your move!</h2>
     <div>
-      <button onclick="game()">Play</button>
+      <button id="Rock">Rock</button>
+      <button id="Paper">Paper</button>
+      <button id="Scissors">Scissors</button>
     </div>
   </body>
 </html>
